# act-tui-html-hybrid

./: .gitignore  README.md  pyproject.toml
act_tui_html_hybrid/: __init__.py  command_envelope.py  html_export.py  read_surface_client.py  tui.py
docs/: BOUNDARY.md  READ_SURFACE_CONTRACT.md
tests/: __init__.py  test_viewer_scaffold.py
tests/fixtures/: sample_snapshot.json
